@@ -115,7 +115,6 @@ static void stage1_callback(mpz_t ad, mpz_t p, mpz_t m, void *extra) {
 	
 	poly_sizeopt_t *data = (poly_sizeopt_t *)extra;
 
-	gmp_printf("%Zd %Zd %Zd\n", ad, p, m);
 	poly_sizeopt_run(data, ad, p, m);
 }
 
@@ -246,11 +245,11 @@ void find_poly_core(msieve_obj *obj, mpz_t n,
 				stage1_data.deadline / 3600.0);
 
 		{ /* SB: tried L[1/3,c] fit; it is no better than this */
-			double e0 = (params->digits >= 121) ? 
-						(0.0607 * params->digits + 2.25):
-				                (0.0526 * params->digits + 3.23);
-			if (degree == 4)
-				e0 = 0.0625 * params->digits + 1.69;
+			double e0 = 0.0625 * params->digits + 1.69;
+			if (degree > 4)
+				e0 = (params->digits >= 121) ?
+					(0.0635 * params->digits + 1.608) :
+					(0.0526 * params->digits + 3.23);
 			e0 = exp(-log(10) * e0); 
 #ifdef HAVE_CUDA
 			e0 *= 1.15;
@@ -377,7 +376,6 @@ void find_poly_core(msieve_obj *obj, mpz_t n,
 			if (gmp_sscanf(buf, "%Zd %Zd %Zd", ad, p, m) != 3)
 				continue;
 
-			gmp_printf("poly %Zd %Zd %Zd\n", ad, p, m);
 			poly_sizeopt_run(&sizeopt_data, ad, p, m);
 			if (obj->flags & MSIEVE_FLAG_STOP_SIEVING)
 				break;
@@ -426,6 +424,8 @@ void find_poly_core(msieve_obj *obj, mpz_t n,
 						break;
 				tmp += c;
 			}
+
+			fputs(tmp, stdout);
 
 			if (gmp_sscanf(tmp, "%Zd %Zd", 
 					rat_coeffs[1], rat_coeffs[0]) != 2)
