@@ -189,7 +189,11 @@ root_sieve_run_core(poly_rootopt_t *data, double initial_norm,
 	mpz_set_ui(rs->xdata.mp_lattice_size, 1);
 	line_min = -10;
 	line_max = 10;
-	max_norm = MIN(data->max_sizeopt_norm * alpha_bias, 100 * initial_norm);
+
+	/* polynomial size is allowed to grow a little larger than 
+	   the overall search bound on the size */
+	max_norm = MIN(5.0 * data->max_sizeopt_norm * alpha_bias, 
+			100 * initial_norm);
 
 	num_bounds = 0;
 	for (curr_norm = 0; curr_norm < max_norm;
